--- a/publications.html
+++ b/publications.html
@@ -56,6 +56,8 @@
 <h1>publications</h1>
 						
 <p> <br></br>
+	Vasilaky, Kathryn, Michelle Brock, "Power(ful) Guidelines for Experimental Economists," (2020), <em></em> Journal of the Experimental Science Association.
+	<br></br>
 	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, "<a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems.</a>," (2020) <em> 29th International World Wide Web Conference (WWW/WebConf).</em><a href= https://arxiv.org/abs/2001.11358>Arxiv.</a>
 	<br></br>
 	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <a href="ELA_competition.pdf">Spillover Effects of Girls’ Empowerment on Brothers’ Competitiveness: Evidence from a Lab-in-the-Field Experiment in Uganda,</a> (2020) <em>Economic Development and Cultural Change, forthcoming </em>.
@@ -75,7 +77,7 @@
 	<h1>working papers</h1>
 
 <br></br>
-	Vasilaky, Kathryn, Michelle Brock, "Power(ful) Guidelines for Experimental Economists," (2020), <em></em> R&R.
+	
 	<br></br>
 	Alfredo, Katherine, Aur&eacutelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water Depletion in Northern India: Myself or Others?" (2019)<em></em>.
 	
