--- a/publications.html
+++ b/publications.html
@@ -56,7 +56,7 @@
 <h1>publications</h1>
 						
 <p> <br></br>
-	Vasilaky, Kathryn, Michelle Brock, "Power(ful) Guidelines for Experimental Economists," (2020), <em></em> Journal of the Experimental Science Association.
+	Vasilaky, Kathryn, Michelle Brock, "Power(ful) Guidelines for Experimental Economists," (2020), <em></em> conditional acceptance, Journal of the Experimental Science Association.
 	<br></br>
 	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, "<a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems.</a>," (2020) <em> 29th International World Wide Web Conference (WWW/WebConf).</em><a href= https://arxiv.org/abs/2001.11358>Arxiv.</a>
 	<br></br>
