--- a/publications.html
+++ b/publications.html
@@ -56,22 +56,22 @@
 <h1>publications</h1>
 						
 <p> <br></br>
-	Vasilaky, Kathryn, Michelle Brock, "Power(ful) Guidelines for Experimental Economists," (2020), <em></em> conditional acceptance, Journal of the Experimental Science Association.
+	Vasilaky, Kathryn, Michelle Brock,  <i>Power(ful) Guidelines for Experimental Economists</i>, (2020) <em></em> Journal of the Experimental Science Association, conditional acceptance.
 	<br></br>
-	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, "<a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems.</a>," (2020) <em> 29th International World Wide Web Conference (WWW/WebConf).</em><a href= https://arxiv.org/abs/2001.11358> Arxiv.</a>
+	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, <a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems</a>, (2020) <em> 29th International World Wide Web Conference (WWW/WebConf).</em><a href= https://arxiv.org/abs/2001.11358> Arxiv.</a>
 	<br></br>
-	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <a href="ELA_competition.pdf">Spillover Effects of Girls’ Empowerment on Brothers’ Competitiveness: Evidence from a Lab-in-the-Field Experiment in Uganda,</a> (2020) <em>Economic Development and Cultural Change, forthcoming </em>.
+	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <a href="ELA_competition.pdf">Spillover Effects of Girls’ Empowerment on Brothers’ Competitiveness: Evidence from a Lab-in-the-Field Experiment in Uganda</a>, (2020) <em>Economic Development and Cultural Change, forthcoming </em>.
 	<br></br>
-	Vasilaky, Kathryn, Sof&iacutea Mart&iacutenez S&aacuteez, Radomst Stanimirova, Daniel Osgood, <a href="https://www.mdpi.com/2073-4336/11/1/15">Perceptions of farm size heterogeneity and demand for group index insurance,</a> (2020), <em>Games</em>.
+	Vasilaky, Kathryn, Sof&iacutea Mart&iacutenez S&aacuteez, Radomst Stanimirova, Daniel Osgood, <a href="https://www.mdpi.com/2073-4336/11/1/15">Perceptions of farm size heterogeneity and demand for group index insurance</a>, (2020) <em>Games</em>.
 	<br></br>
-	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "<a href = https://www.tandfonline.com/doi/abs/10.1080/00220388.2018.1554207> Can Education Unlock Scale? The Demand Impact of Educational Games on a Large-Scale Unsubsidised Index Insurance Programme in Ethiopia</a>," (2019) <em> Journal of Development Studies, DOI: 10.1080/00220388.2018.1554207</em>.
+	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, <a href = https://www.tandfonline.com/doi/abs/10.1080/00220388.2018.1554207> Can Education Unlock Scale? The Demand Impact of Educational Games on a Large-Scale Unsubsidised Index Insurance Programme in Ethiopia</a>, (2019) <em> Journal of Development Studies, DOI: 10.1080/00220388.2018.1554207</em>.
 	<br></br>
-	Vasilaky, Kathryn, Kenneth Leonard, "<a href = https://www.journals.uchicago.edu/doi/10.1086/697430> As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Uganda</a>," (2018) <em> Economic Development and Cultural Change, 66(4): 755-792. </em>
+	Vasilaky, Kathryn, Kenneth Leonard, <a href = https://www.journals.uchicago.edu/doi/10.1086/697430> As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Uganda</a>, (2018) <em> Economic Development and Cultural Change, 66(4): 755-792. </em>
 	(<a href="target_input_model.pdf">Supplementary derivations,</a> for the Target-Input model with Bayesian updating)
 	<br></br>
-	Vasilaky, Kathryn, Asif Islam, "<a href= https://www.sciencedirect.com/science/article/pii/S0305750X17303479>By Team or By Tournament? Incentives for Sharing Information in an Experimental Game</a>," (2018) World Development, 103: 216-225.
+	Vasilaky, Kathryn, Asif Islam, <a href= https://www.sciencedirect.com/science/article/pii/S0305750X17303479>By Team or By Tournament? Incentives for Sharing Information in an Experimental Game</a>, (2018) World Development, 103: 216-225.
 	<br></br>
-	Vasilaky, Kathryn, "<a href= https://academic.oup.com/ajae/article-abstract/95/2/376/70881?redirectedFrom=fulltext>Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?</a>," (2013) <em> American Journal of Agricultural Economics, 95(2): 376-383.</em>
+	Vasilaky, Kathryn, <a href= https://academic.oup.com/ajae/article-abstract/95/2/376/70881?redirectedFrom=fulltext>Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?</a>, (2013) <em> American Journal of Agricultural Economics, 95(2): 376-383.</em>
 	<br></br>
 	
 	<h1>working papers</h1>
