--- a/publications.html
+++ b/publications.html
@@ -64,7 +64,8 @@
 	<br></br>
 	Vasilaky, Kathryn, Sof&iacutea Mart&iacutenez S&aacuteez, Radomst Stanimirova, Daniel Osgood, <a href="https://www.mdpi.com/2073-4336/11/1/15">Perceptions of farm size heterogeneity and demand for group index insurance</a>, (2020) <em>Games</em>.
 	<br></br>
-	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, <a href = https://www.tandfonline.com/doi/abs/10.1080/00220388.2018.1554207> Can Education Unlock Scale? The Demand Impact of Educational Games on a Large-Scale Unsubsidised Index Insurance Programme in Ethiopia</a>, (2019) <em> Journal of Development Studies, DOI: 10.1080/00220388.2018.1554207</em>.
+	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, <a href = https://www.tandfonline.com/doi/abs/10.1080/00220388.2018.1554207> Can Education Unlock Scale? The Demand Impact of Educational Games on a Large-Scale Unsubsidised Index Insurance Programme in Ethiopia</a>, (2019) <em> Journal of Development Studies</em>.
+	<!-- DOI: 10.1080/00220388.2018.1554207-->
 	<br></br>
 	Vasilaky, Kathryn, Kenneth Leonard, <a href = https://www.journals.uchicago.edu/doi/10.1086/697430> As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Uganda</a>, (2018) <em> Economic Development and Cultural Change, 66(4): 755-792. </em>
 	(<a href="target_input_model.pdf">Supplementary derivations,</a> for the Target-Input model with Bayesian updating)
