--- a/publications.html
+++ b/publications.html
@@ -56,7 +56,7 @@
 <h1>publications</h1>
 						
 <p> <br></br>
-	Vasilaky, Kathryn, Michelle Brock,  <i>Power(ful) Guidelines for Experimental Economists</i>, (2020) <em></em> Journal of the Experimental Science Association, conditional acceptance.
+	Vasilaky, Kathryn, Michelle Brock,  Power(ful) Guidelines for Experimental Economists, (2020) <em>Journal of the Experimental Science Association</em>, conditional acceptance.
 	<br></br>
 	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, <a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems</a>, (2020) <em> 29th International World Wide Web Conference (WWW/WebConf). </em><a href= https://arxiv.org/abs/2001.11358>Arxiv.</a>
 	<br></br>
@@ -70,7 +70,7 @@
 	Vasilaky, Kathryn, Kenneth Leonard, <a href = https://www.journals.uchicago.edu/doi/10.1086/697430> As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Uganda</a>, (2018) <em> Economic Development and Cultural Change, 66(4): 755-792. </em>
 	(<a href="target_input_model.pdf">Supplementary derivations,</a> for the Target-Input model with Bayesian updating)
 	<br></br>
-	Vasilaky, Kathryn, Asif Islam, <a href= https://www.sciencedirect.com/science/article/pii/S0305750X17303479>By Team or By Tournament? Incentives for Sharing Information in an Experimental Game</a>, (2018) World Development, 103: 216-225.
+	Vasilaky, Kathryn, Asif Islam, <a href= https://www.sciencedirect.com/science/article/pii/S0305750X17303479>By Team or By Tournament? Incentives for Sharing Information in an Experimental Game</a>, (2018) <em> World Development</em>, 103: 216-225.
 	<br></br>
 	Vasilaky, Kathryn, <a href= https://academic.oup.com/ajae/article-abstract/95/2/376/70881?redirectedFrom=fulltext>Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?</a>, (2013) <em> American Journal of Agricultural Economics, 95(2): 376-383.</em>
 	<br></br>
