--- a/publications.html
+++ b/publications.html
@@ -56,9 +56,12 @@
 <h1>publications</h1>
 						
 <p> <br></br>
-	Vasilaky, Kathryn, Michelle Brock,  Power(ful) Guidelines for Experimental Economists, (2020) <em>Journal of the Experimental Science Association</em>, conditional acceptance.
+	Vasilaky, Kathryn, Michelle Brock,  Power(ful) Guidelines for Experimental Economists, (2020) <a href= https://arxiv.org/abs/2001.11358>Journal of the Experimental Science Association</a>, conditional acceptance.
+
+	https://www.springer.com/journal/40881/
+
 	<br></br>
-	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, <a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems</a>, (2020) <em> 29th International World Wide Web Conference (WWW/WebConf). </em><a href= https://arxiv.org/abs/2001.11358>Arxiv.</a>
+	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, <a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems</a>, (2020) <em> 29th International World Wide Web Conference (WWW/WebConf). </em><a href= https://arxiv.org/abs/2001.11358>Arxiv</a>
 	<br></br>
 	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <a href="ELA_competition.pdf">Spillover Effects of Girls’ Empowerment on Brothers’ Competitiveness: Evidence from a Lab-in-the-Field Experiment in Uganda</a>, (2020) <em>Economic Development and Cultural Change, forthcoming </em>.
 	<br></br>
