--- a/publications.html
+++ b/publications.html
@@ -58,9 +58,9 @@
 <p> <br></br>
 	Vasilaky, Kathryn, Michelle Brock, <a href= https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2692696>Power(ful) Guidelines for Experimental Economists</a>, (2020) <em>Journal of the Experimental Science Association</em>, conditionally accepted.
 	<br></br>
-	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, <a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems</a>, (2020) <em> 29th International World Wide Web Conference (WWW/WebConf). </em><a href= https://arxiv.org/abs/2001.11358>Arxiv</a>
+	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, <a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems</a>, (2020) <em> 29th International World Wide Web Conference (WWW/WebConf). </em><a href= https://arxiv.org/abs/2001.11358>Arxiv.</a>
 	<br></br>
-	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <a href="ELA_competition.pdf">Spillover Effects of Girls’ Empowerment on Brothers’ Competitiveness: Evidence from a Lab-in-the-Field Experiment in Uganda</a>, (2020) <em>Economic Development and Cultural Change, forthcoming </em>.
+	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <a href="ELA_competition.pdf">Spillover Effects of Girls’ Empowerment on Brothers’ Competitiveness: Evidence from a Lab-in-the-Field Experiment in Uganda</a>, (2020) <em>Economic Development and Cultural Change, forthcoming</em>.
 	<br></br>
 	Vasilaky, Kathryn, Sof&iacutea Mart&iacutenez S&aacuteez, Radomst Stanimirova, Daniel Osgood, <a href="https://www.mdpi.com/2073-4336/11/1/15">Perceptions of Farm Size Heterogeneity and Demand for Group Index Insurance</a>, (2020) <em>Games</em>.
 	<br></br>
