--- a/field.html
+++ b/field.html
@@ -19,16 +19,15 @@
 </head>
 
 <body>
-
-		<div id="title">
-				<a href="#"><img src="images/header2.png" alt="" border="0" title="" /></a><br />
-				<h1><font color="#800000"><noframes></noframes> kathryn</font> <font color="#01a9e5"><noframes></noframes> (katya)</font>  <font color="#0183E5"><noframes></noframes> vasilaky</font></h1>
-				<p>
-					
-				</p>
-</div>
 		
 		<div id="container">
+			<p>
+				<a href="#"><img src="images/header2.png" alt="" border="0" title=""  /></a><br />
+			</p>
+		
+		<div >
+				<h1><font color="#800000"><noframes></noframes> kathryn</font> <font color="#01a9e5"><noframes></noframes> (katya)</font>  <font color="#0183E5"><noframes></noframes> vasilaky</font></h1>
+		</div>
 				<div id="sidebar">
 						
 						<h1>pages</h1>
@@ -131,6 +130,6 @@ Gaspé, Quebec, Canada, <a href = https://wwoof.ca/> Woof Canada</a>, Summer 200
 		</div>
 		
 <div id="footer">
-			Copyright @ 2020 | All Rights Reserved </div>
+
 </body>
 </html>
