--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv=Content-Type content="text/plain; charset=iso-8859-1">
-<title>kathryn vasilaky</title>
+<title>katya vasilaky</title>
 <link href="main.css" rel="stylesheet" type="text/css" />
 
 <script>
@@ -21,15 +21,19 @@
 
 <body>
 
-		<div id="title">
-				<a href="#"><img src="images/header2.png" alt="" border="0" title="" /></a><br />
-				<h1><font color="#800000"><noframes></noframes> kathryn</font> <font color="#01a9e5"><noframes></noframes> (katya)</font>  <font color="#0183E5"><noframes></noframes> vasilaky</font></h1>
-				<p>
-					
-				</p>
-</div>
+		
+
+
+
 		
 		<div id="container">
+			<p>
+				<a href="#"><img src="images/header2.png" alt="" border="0" title=""  /></a><br />
+			</p>
+		
+		<div >
+				<h1><font color="#800000"><noframes></noframes> kathryn</font> <font color="#01a9e5"><noframes></noframes> (katya)</font>  <font color="#0183E5"><noframes></noframes> vasilaky</font></h1>
+		</div>
 				<div id="sidebar">
 						
 						<h1>pages</h1>
@@ -122,6 +126,6 @@ for <a href="https://fcni.org//"> Family Care Network </a>
 		</div>
 		
 <div id="footer">
-			Copyright @ 2020 | All Rights Reserved </div>
+			<!-- Copyright @ 2020 | All Rights Reserved </div> -->
 </body>
 </html>
