--- a/teaching.html
+++ b/teaching.html
@@ -25,7 +25,7 @@
 			</p>
 		
 		<div >
-				<h1><font color="#800000"><noframes></noframes> kathryn</font> <font color="#01a9e5"><noframes></noframes> (katya)</font>  <font color="#0183E5"><noframes></noframes> vasilaky</font></h1>
+				<h1><font color="#666547"><noframes></noframes> kathryn</font> <font color="#b3cde0"><noframes></noframes> (katya)</font>  <font color="#6497b1"><noframes></noframes> vasilaky</font></h1>
 		</div>
 				<div id="sidebar">
 						<h1>pages</h1>
