--- a/posts.html
+++ b/posts.html
@@ -56,6 +56,14 @@
 
 						
 <p>	
+
+<br></br>
+Conference Speaker, Revealing Group Choices: the Demand for Index Insurance, Experimental Economics Association, Los Angeles, California, 10/19
+<br></br>
+Conference Speaker, Revealing Group Choices: the Demand for Index Insurance, Advances in Field Experiments, Chicago, Illinois, 9/19
+<br></br>
+Conference Speaker, Group Heterogeneity and the Demand for Index Insurance, Experimental Economics Association, Dijon, France, 9/19
+<br></br>
 Speaker, Groundwater Depletion in Northern India: Myself or Others? Sustainability and Development Conference, University of Michigan, Ann Harbor, Michigan, 11/09/18
 <br></br>
 Speaker, Groundwater Depletion in Northern India: Myself or Others? Advances in Field Experiments, Boston, Massachusetts, 10/05/18
