--- a/joblistings.html
+++ b/joblistings.html
@@ -56,6 +56,8 @@
 						<h1>job listings in data/programming/experiments</h1>
 
 <br></br>
+Experimental Lab Manager - Haas School of Business, UC Berkeley, <a href="haas.png">apply</a>, Berkeley, CA 	
+<br></br>
 Data Scientist - Decision Science at Blackboard Insurance, <a href="https://boards.greenhouse.io/blackboardinsurance/jobs/4671017002">apply</a>, New York, NY				
 <br></br>
 <a href="ucla.png">Full-Time Research Assistant position</a>, at UCLA Anderson, <a href="https://hr.mycareer.ucla.edu/applicants/jsp/shared/frameset/Frameset.jsp?time=1585167649200">apply</a>, Los Angelese, CA	
