--- a/publications.html
+++ b/publications.html
@@ -77,7 +77,9 @@
 	
 	<h1>working papers</h1>
 
-<br></br>
+	<br></br>
+
+	Enenkel, M., Brown, M.E., Vogt, J.V., McCarty, J.L., Reid Bell, A.Guha-Sapir, D., Dorigo, W.A., Vasilaky, K., Svoboda, M., Bonifacio, R, Voigt, S., Anderson, M., Funk, C., Osgood, D.E., Hain, C., Vinck, P., "Why predict climate hazards if we need to understand impacts? Mobile technologies could put humans back into the equation" (2019)<em>R&R</em>.
 	
 	<br></br>
 	Alfredo, Katherine, Aur&eacutelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water Depletion in Northern India: Myself or Others?" (2019)<em></em>.
@@ -89,7 +91,7 @@
 	<br></br>
 	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, "Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field" (2019).
 	<br></br>
-	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky "Improving Smallholder Agriculture via Video-BasedGroup Extension" Jameel Poverty Action Lab,<em> Working Paper, (2020)</em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>, <a href="https://editorialexpress.com/cgi-bin/conference/download.cgi?db_name=NEUDC2015&paper_id=519 ">draft.</a>
+	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky "Improving Smallholder Agriculture via Video-BasedGroup Extension" <em> Working Paper, (2020)</em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>, <a href="https://editorialexpress.com/cgi-bin/conference/download.cgi?db_name=NEUDC2015&paper_id=519 ">draft.</a>
 	
 	<br></br>
 	Vasilaky, Kathryn, "A Generalized Ridge Regression Using an Iterative Solution: the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>, (2019) and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
