--- a/joblistings.html
+++ b/joblistings.html
@@ -56,6 +56,9 @@
 						<h1>job listings in data/programming/experiments</h1>
 
 <br></br>
+Global Research Associate - Precision Agriculture for Development, Harvard University <a href="https://precisionag.bamboohr.com/jobs/view.php?id=12">apply</a>, Worldwide. 	
+
+<br></br>
 Experimental Lab Manager - Haas School of Business, UC Berkeley, <a href="haas.png">apply</a>, Berkeley, CA 	
 <br></br>
 Data Scientist - Decision Science at Blackboard Insurance, <a href="https://boards.greenhouse.io/blackboardinsurance/jobs/4671017002">apply</a>, New York, NY				
