--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 						 <!-- where I teach Econ 201 and <a href="http://catalog.calpoly.edu/search/?P=ECON%20395">Econ 395</a>.  -->
 						<br></br>
-						My research topics are situated in experimental and development economics, utilizing lab experiments in the field, and randomized control trials (RCT). My secondary work is in the intersection of econometrics and machine learning, including bias correction methods and regularization methods for high dimensional problems.
+						My resarch is in experimental and development economics, as well as the intersection of data science and econometrics.  In my applied work I focus on the economic development and empowerment of female farmers, and gender and competition. In my methodological work I focus on bias correction methods - where the bias may be driven by human, statistics or algorithmis.
 
 
 						 <!-- I'm interested in how social networks and group behavior affect information sharing and technology adoption, and how this differs across gender.  -->
