--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 						 <!-- where I teach Econ 201 and <a href="http://catalog.calpoly.edu/search/?P=ECON%20395">Econ 395</a>.  -->
 						<br></br>
-						My resarch is in experimental and development economics, as well as the intersection of data science and econometrics.  In my applied work I focus on the economic development and empowerment of female farmers, group-based technology adoption, and gender and competition. In my methodological work I focus on bias correction methods - where the bias may be statisical, user-driven, or algorithmic. 
+						My research is in experimental and development economics, as well as the intersection of data science and econometrics.  In my applied work I focus on the economic development and empowerment of female farmers, group-based technology adoption, and gender and competition. In my methodological work I focus on bias correction methods - where the bias may be statisical, user-driven, or algorithmic. 
 
 						 <!-- I'm interested in how social networks and group behavior affect information sharing and technology adoption, and how this differs across gender.  -->
 						<br></br>
