--- a/publications.html
+++ b/publications.html
@@ -56,7 +56,7 @@
 <h1>publications</h1>
 						
 <p> <br></br>
-	Vasilaky, Kathryn, Michelle Brock, <a href= https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2692696>Power(ful) Guidelines for Experimental Economists</a>, (2020) <em>Journal of the Experimental Science Association</em>, conditionally accepted.
+	Vasilaky, Kathryn, Michelle Brock, <a href= https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2692696>Power(ful) Guidelines for Experimental Economists</a>, (2020) <em>Journal of the Experimental Science Association</em>, forthcoming.
 	<br></br>
 	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, <a href= https://www.semanticscholar.org/paper/Correcting-for-Selection-Bias-in-Learning-to-rank-Ovaisi-Ahsan/dd18602ba7d8f697d21cd9af7e577ab2f15c0004>Correcting for Selection Bias in Learning-to-rank Systems</a>, (2020) <em> Proceedings of the 2020 World Wide Web Conference (WWW/WebConf). </em>
 	<br></br>
