--- a/teaching.html
+++ b/teaching.html
@@ -56,7 +56,7 @@
 				
 
 	<h1>teaching</h1>
-		Cal Poly, Economics 395 Programming for Economics and Analytics, Spring 2017 - present
+		Cal Poly, Economics 395 Programming for Economics and Analytics, Spring 2017 - present. Thanks to <a href="https://learn.datacamp.com/">DataCamp </a> for supplementary exercises. 
 		<br></br>
 		Cal Poly, Economics 201 Survey of Economics, Winter 2017 - present
 		<br></br>
