--- a/brownbag.html
+++ b/brownbag.html
@@ -1,1 +1,14 @@
+<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-172833031-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-172833031-1');
+</script>
+</head>
+
+
 <iframe src="https://calendar.google.com/calendar/embed?src=pp2qu3f6aglntbo1gts57lhipc%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
