--- a/field.html
+++ b/field.html
@@ -88,7 +88,7 @@ Dominican Republic (Northern) Group Insurance and Informal Networks. Internation
 <br></br>
 Philippines (Manila) The Effects of Disaster Response on Poverty and Inequality. Earth Institute, Columbia University and World Bank Philippines, September 2015.
 <br></br>
-India (Punjab and Haryana) Water Measurement and Water Savings. Earth Institute, Columbia University and Haryana Irrigation Management Institute, May 2015 – March 2016.
+<!--India (Punjab and Haryana) Water Measurement and Water Savings. Earth Institute, Columbia University and Haryana Irrigation Management Institute, May 2015 – March 2016.--> 
 <br></br>
 Senegal (Koungheul) and Honduras (Tegucigalpa) The Effects of Group Size and Information in Index Insurance. International Research Institute for Climate and Society, Columbia University, and WFP, May 2015. 
 <br></br>
@@ -109,10 +109,7 @@ Tanzania (Bududa) “Markets for Cotton By-Products.” World Bank Development P
 Uganda (Oyam and Bukedea) “Female Farmer Training and Agricultural Productivity.” World Bank Economics Research Group (dissertation), with Markus Goldstein, January 2009-April 2010.
 
 <h1>personal field work</h1>
-I'm an active volunteer in Woofing (Willing Workers on Organic Farms). I believe in having my own hands-on experience in agriculture as many of the studies that I conduct are with farmers. 
-
-
-<!-- 
+I frequently farm myself both internationally via Worldwide Opportunities on Organic Farms (WOOF) and as a farm lead for <a href = https://www.firstfruitsslo.org/> First Fruits Farm</a> in San Luis Obispo, CA.
 
 <br></br>
 Nieva, Spain, <a href = https://wwoof.es/> WOOF Spain</a>, Summer 2019
@@ -123,7 +120,7 @@ Sainte Foy de Belves, Dordogne, France, <a href = https://app.wwoof.fr> WOOF Fra
 <br></br>
 Gaspé, Quebec, Canada, <a href = https://wwoof.ca/> Woof Canada</a>, Summer 2007
 <br></br>				
--->
+
 						
 					
 
