--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						
 						<br></br>
 
-						In line with my research, I believe in making education accessible and inclusive. To this end I co-ran<font color="#0183E5"><noframes></noframes> <a href="https://www.meetup.com/NYC-PyLadies/"> Pyladies NYC</a></font>, taught for<a href="https://girlswhocode.com"> Girls Who Code</a>, currently co-run <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a> and <a href="https://groups.google.com/d/forum/women-in-econ"> Women in Economics</a>, am a mentor for <a href="https://beaconmentors.calpoly.edu/network">Beacon</a> at Cal Poly, and for the <a href="https://fcni.org/">Family Care Network</a> in San Luis Obispo. I am also an avid <a href="https://wwoof.net/"> WOOF-er</a>, and have WOOFED in France, Spain and Canda several times. I have had the opportunity to live in 3 different countries, work in 13, and travel to 33!
+						In line with my research, I believe in making education accessible and inclusive. To this end I co-ran<font color="#0183E5"><noframes></noframes> <a href="https://www.meetup.com/NYC-PyLadies/"> Pyladies NYC</a></font>, taught for<a href="https://girlswhocode.com"> Girls Who Code</a>, currently co-run <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a> and <a href="https://groups.google.com/d/forum/women-in-econ"> Women in Economics</a>, am a mentor for <a href="https://beaconmentors.calpoly.edu/network">Beacon</a> at Cal Poly, and for the <a href="https://fcni.org/">Family Care Network</a> in San Luis Obispo. I am also an farmer, and have <a href="https://wwoof.net/"> WOOFed</a> in France, Spain and Canda several times. I have had the opportunity to live in 3 different countries, work in 13, and travel to 33!
 
 
 
