--- a/publications.html
+++ b/publications.html
@@ -68,6 +68,8 @@
 <p> <br></br>
 	Vasilaky, Kathryn, Michelle Brock, <a href= https://doi.org/10.1007/s40881-020-00090-5>Power(ful) Guidelines for Experimental Economists</a>, (2020) <em>Journal of the Experimental Science Association</em>, forthcoming.
 	<br></br>
+	Enenkel, M., Brown, M.E., Vogt, J.V., McCarty, J.L., Reid Bell, A.Guha-Sapir, D., Dorigo, W.A., Vasilaky, K., Svoboda, M., Bonifacio, R, Voigt, S., Anderson, M., Funk, C., Osgood, D.E., Hain, C., Vinck, P., "Why predict climate hazards if we need to understand impacts? Mobile technologies could put humans back into the equation" (2020)<em> Climatic Change</em>, forthcoming.
+	<br></br>
 	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, <a href= https://www.semanticscholar.org/paper/Correcting-for-Selection-Bias-in-Learning-to-rank-Ovaisi-Ahsan/dd18602ba7d8f697d21cd9af7e577ab2f15c0004>Correcting for Selection Bias in Learning-to-rank Systems</a>, (2020) <em> Proceedings of the 2020 World Wide Web Conference (WWW/WebConf). </em>
 	<br></br>
 	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <a href="ELA_competition.pdf">Spillover Effects of Girls’ Empowerment on Brothers’ Competitiveness: Evidence from a Lab-in-the-Field Experiment in Uganda</a>, (2020) <em>Economic Development and Cultural Change, forthcoming</em>.
@@ -88,8 +90,6 @@
 	<h1>working papers</h1>
 
 	<br></br>
-
-	Enenkel, M., Brown, M.E., Vogt, J.V., McCarty, J.L., Reid Bell, A.Guha-Sapir, D., Dorigo, W.A., Vasilaky, K., Svoboda, M., Bonifacio, R, Voigt, S., Anderson, M., Funk, C., Osgood, D.E., Hain, C., Vinck, P., "Why predict climate hazards if we need to understand impacts? Mobile technologies could put humans back into the equation" (2020)<em> R&R</em>.
 	
 	<br></br>
 	Hill, Ruth, Carolina Mej&iacutea-Mantilla, Kathryn Vasilaky, "Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda." World Bank Research Paper Vol. 1, No. 8627, (2020) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda"></a> R&R</em>.
