--- a/publications.html
+++ b/publications.html
@@ -86,6 +86,11 @@
 	<br></br>
 	Vasilaky, Kathryn, <a href= https://academic.oup.com/ajae/article-abstract/95/2/376/70881?redirectedFrom=fulltext>Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?</a>, (2013) <em> American Journal of Agricultural Economics, 95(2): 376-383.</em>
 	<br></br>
+
+	Haack, R, A., K. O. Britton, E. G. Brockerhoff, J. F. Cavey, L. J. Garrett, M. Kimberley, F. Lowenstein, A. Nuding, L. J. Olson, J. Turner, and K. N. Vasilaky. ``Effectiveness of the International Phytosanitary Standard ISPM No. 15 on Reducing Wood Borer Infestation Rates in Wood Packaging Material Entering the United States.'' (2014) <em> PLoS ONE, 9(5).</em>
+
+	<br></br>
+
 	
 	<h1>working papers</h1>
 
