--- a/publications.html
+++ b/publications.html
@@ -68,7 +68,7 @@
 <p> <br></br>
 	Vasilaky, Kathryn, Michelle Brock, <a href= https://doi.org/10.1007/s40881-020-00090-5>Power(ful) Guidelines for Experimental Economists</a>, (2020) <em>Journal of the Experimental Science Association</em>, forthcoming.
 	<br></br>
-	Enenkel, M., Brown, M.E., Vogt, J.V., McCarty, J.L., Reid Bell, A.Guha-Sapir, D., Dorigo, W.A., Vasilaky, K., Svoboda, M., Bonifacio, R, Voigt, S., Anderson, M., Funk, C., Osgood, D.E., Hain, C., Vinck, P., <a href= https://link.springer.com/article/10.1007/s10584-020-02878-0?wt_mc=Internal.Event.1.SEM.ArticleAuthorOnlineFirst>Why predict climate hazards if we need to understand impacts? Mobile technologies could put humans back into the equation</a>,(2020)<em> Climatic Change</em>, forthcoming.
+	Enenkel, M., M.E. Brown, J.V. Vogt, J.L.McCarty, A.Reid Bell, D. Guha-Sapir, W.A. Dorigo, K. Vasilaky, M. Svoboda, R. Bonifacio, S. Voigt, M. Anderson, C. Funk, D.E. Osgood, C. Hain, P. Vinck, <a href= https://link.springer.com/article/10.1007/s10584-020-02878-0?wt_mc=Internal.Event.1.SEM.ArticleAuthorOnlineFirst>Why predict climate hazards if we need to understand impacts? Mobile technologies could put humans back into the equation</a>,(2020)<em> Climatic Change</em>, forthcoming.
 
 	<br></br>
 	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, <a href= https://www.semanticscholar.org/paper/Correcting-for-Selection-Bias-in-Learning-to-rank-Ovaisi-Ahsan/dd18602ba7d8f697d21cd9af7e577ab2f15c0004>Correcting for Selection Bias in Learning-to-rank Systems</a>, (2020) <em> Proceedings of the 2020 World Wide Web Conference (WWW/WebConf). </em>
