--- a/publications.html
+++ b/publications.html
@@ -68,6 +68,8 @@
 <p> <br></br>
 	Vasilaky, Kathryn, Michelle Brock, <a href= https://doi.org/10.1007/s40881-020-00090-5>Power(ful) Guidelines for Experimental Economists</a>, (2020) <em>Journal of the Experimental Science Association</em>.
 	<br></br>
+	Hernandez-Aguilera, J. M. Mauerman, A. Herrera, K. Vasilaky, W. Baethgen, A. Loboguerrero, R. Diro, Y. Tekeste, D. Osgood, <a href="https://www.mdpi.com/2073-4336/11/1/15">Framed experiments and Games in Agriculture: A systematic review of the 21st century in economics and social science</a>, (2020) <em>Games</em>. forthcoming.
+	<br></br>
 	Enenkel, M., M.E. Brown, J.V. Vogt, J.L.McCarty, A.Reid Bell, D. Guha-Sapir, W.A. Dorigo, K. Vasilaky, M. Svoboda, R. Bonifacio, S. Voigt, M. Anderson, C. Funk, D.E. Osgood, C. Hain, P. Vinck, <a href= https://link.springer.com/article/10.1007/s10584-020-02878-0?wt_mc=Internal.Event.1.SEM.ArticleAuthorOnlineFirst>Why predict climate hazards if we need to understand impacts? Mobile technologies could put humans back into the equation</a>,(2020)<em> Climatic Change</em>.
 
 	<br></br>
