--- a/teaching.html
+++ b/teaching.html
@@ -90,6 +90,16 @@
 		<br></br>
 		Python Workshops: Network Analysis, Webscraping & APIs, Data Mining
 	<h1>workshops</h1>
+		<br></br>
+		November 19, 2019
+		<a href="https://www.meetup.com/codeslo/events/266325367/">Big Ill (conditioned) Data - What to Do? @ Bolt About</a>
+		<br></br>
+		November 14, 2018
+		<a href="https://www.meetup.com/PydataSLO/events/255616349/">Big Ill (conditioned) Data - What to Do? @ Cal Poly </a>
+		<br></br>
+		November 14, 2018
+		<a href="https://www.meetup.com/PydataSLO/events/255616349/">Big Ill (conditioned) Data - What to Do? @ 15Five @ Fueled Collective </a>
+		<br></br>
 		May 21, 2017
 		<a href="https://us.pycon.org/2017/schedule/presentation/606/">Making Big Data a Little Bit Smaller @ Pycon 2017 </a>
 		<br></br>
