--- a/teaching.html
+++ b/teaching.html
@@ -92,10 +92,7 @@
 	<h1>workshops</h1>
 		<br></br>
 		November 19, 2019
-		<a href="https://www.meetup.com/codeslo/events/266325367/">Big Ill (conditioned) Data - What to Do? @ Bolt About</a>
-		<br></br>
-		November 14, 2018
-		<a href="https://www.meetup.com/PydataSLO/events/255616349/">Big Ill (conditioned) Data - What to Do? @ Cal Poly </a>
+		<a href="https://www.meetup.com/codeslo/events/266325367/">A Little Intro to Big Data and ML @ Bolt About</a>
 		<br></br>
 		November 14, 2018
 		<a href="https://www.meetup.com/PydataSLO/events/255616349/">Big Ill (conditioned) Data - What to Do? @ 15Five @ Fueled Collective </a>
