--- a/publications.html
+++ b/publications.html
@@ -108,7 +108,7 @@
 
 	<!-- World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Economic Development and Cultural Change</a></em>.-->
 	
-		Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, "TSocial context and child-rearing environments: How social structure shapes female competition throughout her lifetime" (2020), <a href="female_competition.pdf">Working Paper</a>.
+		Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, "Social context and child-rearing environments: How social structure shapes female competition throughout her lifetime" (2020), <a href="female_competition.pdf">Working Paper</a>.
 	<br></br>
 	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky "Improving Smallholder Agriculture via Video-BasedGroup Extension" <em> Working Paper, (2020)</em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>, <a href="https://editorialexpress.com/cgi-bin/conference/download.cgi?db_name=NEUDC2015&paper_id=519 ">draft.</a>
 	
