--- a/publications.html
+++ b/publications.html
@@ -75,7 +75,7 @@
 	Enenkel, M., M.E. Brown, J.V. Vogt, J.L.McCarty, A.Reid Bell, D. Guha-Sapir, W.A. Dorigo, K. Vasilaky, M. Svoboda, R. Bonifacio, S. Voigt, M. Anderson, C. Funk, D.E. Osgood, C. Hain, P. Vinck, <a href= https://link.springer.com/article/10.1007/s10584-020-02878-0?wt_mc=Internal.Event.1.SEM.ArticleAuthorOnlineFirst>Why predict climate hazards if we need to understand impacts? Mobile technologies could put humans back into the equation</a>,(2020)<em> Climatic Change</em>.
 
 	<br></br>
-	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <a href="ELA_competition.pdf">Spillover Effects of Girls’ Empowerment on Brothers’ Competitiveness: Evidence from a Lab-in-the-Field Experiment in Uganda</a>, (2020) <em>Economic Development and Cultural Change, forthcoming</em>.
+	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <a href="https://www.journals.uchicago.edu/doi/10.1086/713882">Spillover Effects of Girls’ Empowerment on Brothers’ Competitiveness: Evidence from a Lab-in-the-Field Experiment in Uganda</a>, (2020) <em>Economic Development and Cultural Change</em>.
 	<br></br>
 	Vasilaky, Kathryn, Sof&iacutea Mart&iacutenez S&aacuteez, Radomst Stanimirova, Daniel Osgood, <a href="https://www.mdpi.com/2073-4336/11/1/15">Perceptions of Farm Size Heterogeneity and Demand for Group Index Insurance</a>, (2020) <em>Games</em>.
 	<br></br>
