--- a/publications.html
+++ b/publications.html
@@ -139,6 +139,12 @@
 
 	
 	<br></br>
+
+	
+
+	<a href="https://twitter.com/digitalgreenorg/status/1308641976732938240">An interview with the Bill and Melinda Gates Foundation</a><strong></strong> on our randomized controlled trial conducted with Digital Green and the support of BMGF .
+
+
 	<a href="http://iri.columbia.edu/news/video-what-tools-do-honduran-farmers-want-for-climate-risk/">Field video</a><strong></strong> from International Research Institute, Columbia University on Micro Insurance in Honduras.
 	<br></br>
 	A <a href="http://blogs.worldbank.org/impactevaluations/increasing-prosperity-poorest-using-social-networks-guest-post-kathryn-vasilaky">guest blog post</a> for the World Bank on social networks and economic prosperity.
