--- a/publications.html
+++ b/publications.html
@@ -66,6 +66,8 @@
 <h1>publications</h1>
 						
 <p> <br></br>
+	Ovaisi, Zohreh, Kathryn Vasilaky, Elena Zheleva. Propensity-independent Bias Recovery in Offline Learning-to-rank Systems, (2021) 44th International ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR).
+	<br></br>
 	Vasilaky, Kathryn, Michelle Brock, <a href= https://doi.org/10.1007/s40881-020-00090-5>Power(ful) Guidelines for Experimental Economists</a>, (2020) <em>Journal of the Experimental Science Association</em>.
 	<br></br>
 	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, <a href= https://www.semanticscholar.org/paper/Correcting-for-Selection-Bias-in-Learning-to-rank-Ovaisi-Ahsan/dd18602ba7d8f697d21cd9af7e577ab2f15c0004>Correcting for Selection Bias in Learning-to-rank Systems</a>, (2020) <em> Proceedings of the 2020 World Wide Web Conference (WWW/WebConf). </em>
