--- a/index.html
+++ b/index.html
@@ -91,7 +91,16 @@
 						
 						<br></br>
 
-						In line with my research, I believe in making education accessible and inclusive. To this end I co-ran<font color="#0183E5"><noframes></noframes> <a href="https://www.meetup.com/NYC-PyLadies/"> Pyladies NYC</a></font>, taught for<a href="https://girlswhocode.com"> Girls Who Code</a>, currently co-run <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a> and <a href="https://groups.google.com/d/forum/women-in-econ"> Women in Economics</a>, am a mentor for <a href="https://beaconmentors.calpoly.edu/network">Beacon</a> at Cal Poly, and for the <a href="https://fcni.org/">Family Care Network</a> in San Luis Obispo. I am also an farmer, and have <a href="https://wwoof.net/"> WOOFed</a> in France, Spain and Canda several times. I have had the opportunity to live in 3 different countries, work in 13, and travel to 33!
+						In line with my research, I believe in making education accessible and inclusive. To this end I co-ran<font color="#0183E5"><noframes></noframes> <a href="https://www.meetup.com/NYC-PyLadies/"> Pyladies NYC</a></font>, taught for<a href="https://girlswhocode.com"> Girls Who Code</a>, currently co-run <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a> and <a href="https://groups.google.com/d/forum/women-in-econ"> Women in Economics</a>, am a mentor for <a href="https://beaconmentors.calpoly.edu/network">Beacon</a> at Cal Poly, teacher for Cal Poly's <a href="https://epic.calpoly.edu/"> EPIC</a> program, am a founding member of Cal Poly's <a href="https://data.calpoly.edu/"> Data Sceince</a> initiative and committee chair for ethics and social justice in data science, and for the <a href="https://fcni.org/">Family Care Network</a> in San Luis Obispo. 
+
+						I am an avid farmer, and have volunteered with <a href="https://wwoof.net/"> WOOF</a> in several countries; a co-founder of <a href="http://www.groundtruthdata.com/"> Ground Truth Data</a>, a startup that collects granular weather data in less-developed countries to improve rainfall prediction using low cost water sensors and crowd sourced input; and in my past life was a professional ballet dancer with the <a href="https://www.sfballet.org/"> San Francisco Ballet</a> company. 
+
+
+
+						<!-- 
+						France, Spain and Canada several times. I have had the opportunity to live in 3 different countries, work in 13, and travel to 33!
+
+						 -->
 
 
 
@@ -116,7 +125,7 @@ for <a href="https://fcni.org//"> Family Care Network </a>
 						
 
 						<br></br>
-						<!--I am also a co-founder of <a href="http://www.groundtruthdata.com/"> Ground Truth Data</a>, a startup that collects granular weather data in less-developed countries to improve rainfall prediction using low cost water sensors and crowd sourced citizen input. -->
+						<!--I am also a co-founder of <a href="http://www.groundtruthdata.com/"> Ground Truth Data</a>, a startup that collects granular weather data in less-developed countries to improve rainfall prediction using low cost water sensors and crowd sourced input. -->
 
 						<br></br>
 
