--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						
 						<br></br>
 
-						In line with my research, I believe in making education accessible and inclusive. To this end I co-ran<font color="#0183E5"><noframes></noframes> <a href="https://www.meetup.com/NYC-PyLadies/"> Pyladies NYC</a></font>, taught for<a href="https://girlswhocode.com"> Girls Who Code</a>, currently co-run <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a>, am a mentor for <a href="https://beaconmentors.calpoly.edu/network">Beacon</a>, teach for Cal Poly's <a href="https://epic.calpoly.edu/"> EPIC</a>, am a founding member of Cal Poly's <a href="https://data.calpoly.edu/"> Data Science</a> initiative where we host cool programming <a href="https://sites.google.com/view/data-training-cal-poly/home"> workshops</a>.
+						In line with my research, I believe in making education accessible and inclusive. To this end I co-ran<font color="#0183E5"><noframes></noframes> <a href="https://www.meetup.com/NYC-PyLadies/"> Pyladies NYC</a></font>, taught for<a href="https://girlswhocode.com"> Girls Who Code</a>, currently co-run <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a>, am a mentor for <a href="https://beaconmentors.calpoly.edu/network">Beacon</a>, teach for Cal Poly's <a href="https://epic.calpoly.edu/"> EPIC</a>, am a founding member of Cal Poly's <a href="https://data.calpoly.edu/"> Data Science</a> initiative where we host free programming <a href="https://sites.google.com/view/data-training-cal-poly/home"> workshops</a>.
 
 						
 
@@ -101,6 +101,8 @@ and <a href="https://groups.google.com/d/forum/women-in-econ"> Women in Economic
 
 						and committee chair for ethics and social justice in data science, and for the <a href="https://fcni.org/">Family Care Network</a> in San Luis Obispo. 
  -->
+ <br></br>
+ 
 						I am an avid farmer, and have volunteered with <a href="https://wwoof.net/"> WOOF</a> in several countries; am a co-founder of <a href="http://www.groundtruthdata.com/"> Ground Truth Data</a>, a startup that collects granular weather data in less-developed countries to improve rainfall prediction using low cost water sensors and crowd sourced input; and in my past life was a professional ballet dancer with the <a href="https://www.sfballet.org/"> San Francisco Ballet</a> company. 
 
 
