--- a/index.html
+++ b/index.html
@@ -102,12 +102,14 @@ and <a href="https://groups.google.com/d/forum/women-in-econ"> Women in Economic
 						and committee chair for ethics and social justice in data science, and for the <a href="https://fcni.org/">Family Care Network</a> in San Luis Obispo. 
  -->
  <br></br>
- 
-						I am an avid farmer, and have volunteered with <a href="https://wwoof.net/"> WOOF</a> in several countries; am a co-founder of <a href="http://www.groundtruthdata.com/"> Ground Truth Data</a>, a startup that collects granular weather data in less-developed countries to improve rainfall prediction using low cost water sensors and crowd sourced input; and in my past life was a professional ballet dancer with the <a href="https://www.sfballet.org/"> San Francisco Ballet</a> company. 
+
+						I am an avid farmer, and have volunteered with <a href="https://wwoof.net/"> WOOF</a> in several countries; am a co-founder of <a href="http://www.groundtruthdata.com/"> Ground Truth Data</a>, a startup that collects granular weather data; and in my past life was a professional ballet dancer with the <a href="https://www.sfballet.org/"> San Francisco Ballet</a> company. 
 
 
 
 						<!-- 
+							in less-developed countries to improve rainfall prediction using low cost water sensors and crowd sourced input
+							
 						France, Spain and Canada several times. I have had the opportunity to live in 3 different countries, work in 13, and travel to 33!
 
 						 -->
