--- a/teaching.html
+++ b/teaching.html
@@ -90,6 +90,8 @@
 		<br></br>
 		Python Workshops: Network Analysis, Webscraping & APIs, Data Mining
 	<h1>workshops</h1>
+		May 29, 2021 
+		<a href="https://sites.google.com/view/data-training-cal-poly/home">Designing Data Science Course Modules @ Cal Poly, virtual</a>
 		<br></br>
 		November 19, 2019
 		<a href="https://www.meetup.com/codeslo/events/266325367/">A Little Intro to Big Data and ML @ Bolt About</a>
