--- a/teaching.html
+++ b/teaching.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+
+	      <style>
+         img {
+            height: 50%;
+            width: 50%;
+         }
+      </style>
+
+
 <meta http-equiv=Content-Type content="text/plain; charset=iso-8859-1">
 <title>kathryn vasilaky</title>
 <link href="main.css" rel="stylesheet" type="text/css" />
@@ -27,6 +36,9 @@
 </script>
 
 </head>
+
+
+
 
 <body>
 		
