--- a/cv.html
+++ b/cv.html
@@ -67,7 +67,7 @@
 
 
 						</br>
-					   <a href="https://github.com/kathrynthegreat/kathrynthegreat.github.io/blob/master/VASILAKY_CV.pdf">
+					   <a href="https://github.com/kathrynthegreat/kathrynthegreat.github.io/blob/master/CV.pdf">
 				         <img src="kv3.png" style = "width:400px;height:400;">
 
 				      </a>
